--- a/pages/learn/acustica_degli_spazi_musicali/01_02_03_modi_naturali_in_tre_dimensioni_spaziali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_02_03_modi_naturali_in_tre_dimensioni_spaziali.html
@@ -160,14 +160,29 @@
                               <div class="col-md-12 col-lg-8">
                                   <p class="mbr-text mbr-fonts-style display-7">
                                     Qui invece vedimo la rappresentazione grafica corrispondente alla f2 (2, 0, 0). Gli indici tra parentesi rappresentano le 3 coppie di pareti.
-                                    
+                                    I modi visti fin qui si chiamamo <b>modi assiali</b> o a una dimensione.
+                                    <br>
+                                    <br>
+                                    Vediamo ora come si comportano le onde stazionarie in due dimensioni, ovvero i <b>modi tangenziali</b>.
                                   </p>
                                 </div>
                             </div>
                         </div>
                     </section>
 
-
+                    <!-- Image-->
+                          <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+                              <div class="container-fluid">
+                                  <div class="row justify-content-center">
+                                      <div class="col-12 col-lg-5">
+                                          <div class="image-wrapper">
+                                              <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/07_I_modo_naturale_2_coppie.png" alt="www.gabrielavelitch.com">
+                                              <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Primo modo naturale tra quattro pareti (1, 1, 0)</p>
+                                          </div>
+                                      </div>
+                                  </div>
+                              </div>
+                          </section>
 
 
 <!-- Prev/Next-->
