--- a/pages/learn/acustica_degli_spazi_musicali/01_02_03_modi_naturali_in_tre_dimensioni_spaziali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_02_03_modi_naturali_in_tre_dimensioni_spaziali.html
@@ -191,6 +191,9 @@
                                       <div class="col-md-12 col-lg-8">
                                           <p class="mbr-text mbr-fonts-style display-7">
                                             Questo modo ha due linee nodali incrociate, non parallelen proprio perchè coinvolge due coppie di pareti.
+                                            Possono essere anche chiamati <b>modi bidimensionali</b>
+
+                                            01>19>07
                                           </p>
                                         </div>
                                     </div>
