--- a/pages/learn/acustica_degli_spazi_musicali/01_02_03_modi_naturali_in_tre_dimensioni_spaziali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_02_03_modi_naturali_in_tre_dimensioni_spaziali.html
@@ -200,6 +200,19 @@
                                 </div>
                             </section>
 
+                            <!-- Image-->
+                                  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+                                      <div class="container-fluid">
+                                          <div class="row justify-content-center">
+                                              <div class="col-12 col-lg-5">
+                                                  <div class="image-wrapper">
+                                                      <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/08_sei_pareti.gif" alt="www.gabrielavelitch.com">
+                                                      <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Primo modo naturale tra sei pareti (1, 1, 1)</p>
+                                                  </div>
+                                              </div>
+                                          </div>
+                                      </div>
+                                  </section>
 
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
