--- a/pages/learn/acustica_degli_spazi_musicali/01_02_03_modi_naturali_in_tre_dimensioni_spaziali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_02_03_modi_naturali_in_tre_dimensioni_spaziali.html
@@ -192,8 +192,9 @@
                                           <p class="mbr-text mbr-fonts-style display-7">
                                             Questo modo ha due linee nodali incrociate, non parallelen proprio perchè coinvolge due coppie di pareti.
                                             Possono essere anche chiamati <b>modi bidimensionali</b>
-
-                                            01>19>07
+                                            <br>
+                                            <br>
+                                            Osserviamo ora il caso a tre dimensioni.
                                           </p>
                                         </div>
                                     </div>
@@ -213,6 +214,21 @@
                                           </div>
                                       </div>
                                   </section>
+
+
+                                  <!-- Text-->
+                                  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+                                      <div class="container">
+                                          <div class="row justify-content-center">
+                                              <div class="col-md-12 col-lg-8">
+                                                  <p class="mbr-text mbr-fonts-style display-7">
+                                                    
+                                                  </p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </section>
+
 
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
