--- a/pages/learn/acustica_degli_spazi_musicali/01_02_03_modi_naturali_in_tre_dimensioni_spaziali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_02_03_modi_naturali_in_tre_dimensioni_spaziali.html
@@ -191,10 +191,11 @@
                                       <div class="col-md-12 col-lg-8">
                                           <p class="mbr-text mbr-fonts-style display-7">
                                             Questo modo ha due linee nodali incrociate, non parallelen proprio perchè coinvolge due coppie di pareti.
-                                            Possono essere anche chiamati <b>modi bidimensionali</b>
+                                            Possono essere anche chiamati <b>modi bidimensionali</b>.
                                             <br>
                                             <br>
-                                            Osserviamo ora il caso a tre dimensioni.
+                                            Osserviamo ora il caso a tre dimensioni accendendo la casella (1, 1, 1). Questo modo ha tre superfici nodali.
+                                            Vengono chiamati <b>modi obliqui o tridimensionali</b> e anche questi, come gli altri, hanno una propria frequenza associata.
                                           </p>
                                         </div>
                                     </div>
@@ -222,7 +223,7 @@
                                           <div class="row justify-content-center">
                                               <div class="col-md-12 col-lg-8">
                                                   <p class="mbr-text mbr-fonts-style display-7">
-                                                    
+
                                                   </p>
                                                 </div>
                                             </div>
