--- a/pages/learn/acustica_degli_spazi_musicali/01_02_03_modi_naturali_in_tre_dimensioni_spaziali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_02_03_modi_naturali_in_tre_dimensioni_spaziali.html
@@ -176,7 +176,7 @@
                                   <div class="row justify-content-center">
                                       <div class="col-12 col-lg-5">
                                           <div class="image-wrapper">
-                                              <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/07_I_modo_naturale_2_coppie.png" alt="www.gabrielavelitch.com">
+                                              <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/07_quattro_pareti.gif" alt="www.gabrielavelitch.com">
                                               <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Primo modo naturale tra quattro pareti (1, 1, 0)</p>
                                           </div>
                                       </div>
