--- a/pages/learn/acustica_degli_spazi_musicali/01_02_03_modi_naturali_in_tre_dimensioni_spaziali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_02_03_modi_naturali_in_tre_dimensioni_spaziali.html
@@ -116,7 +116,7 @@
                   <div class="row justify-content-center">
                       <div class="col-12 col-lg-5">
                           <div class="image-wrapper">
-                              <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/06_I_modo_naturale.png" alt="www.gabrielavelitch.com">
+                              <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/06_primo_modo_due_pareti.gif" alt="www.gabrielavelitch.com">
                               <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Primo modo naturale tra due pareti (1, 0, 0)</p>
                           </div>
                       </div>
@@ -144,7 +144,7 @@
                           <div class="row justify-content-center">
                               <div class="col-12 col-lg-5">
                                   <div class="image-wrapper">
-                                      <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/06_II_modo_naturale.png" alt="www.gabrielavelitch.com">
+                                      <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/06_secondo_modo_due_pareti.gif" alt="www.gabrielavelitch.com">
                                       <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Secondo modo naturale tra due pareti (2, 0, 0)</p>
                                   </div>
                               </div>
@@ -194,7 +194,7 @@
                                             Possono essere anche chiamati <b>modi bidimensionali</b>.
                                             <br>
                                             <br>
-                                            Osserviamo ora il caso a tre dimensioni accendendo la casella (1, 1, 1). Questo modo ha tre superfici nodali.
+                                            Osserviamo ora il caso a tre dimensioni, dunque a sei pareti, accendendo la casella (1, 1, 1). Questo modo ha tre superfici nodali.
                                             Vengono chiamati <b>modi obliqui o tridimensionali</b> e anche questi, come gli altri, hanno una propria frequenza associata.
                                           </p>
                                         </div>
