--- a/pages/learn/acustica_degli_spazi_musicali/01_02_04_analisi_delle_frequenze_associate.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_02_04_analisi_delle_frequenze_associate.html
@@ -91,8 +91,8 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-                    Per poter analizzare uno spazio più complesso usiamo <a href="https://amcoustics.com/tools/amroc?l=500&w=700&h=200&r60=0.6"><b>amroc - The Room Mode Calculator</b></a>, un'applet di calcolo dei modi naturali di uno spazio a tre dimensioni.
-                    Possiamo notare che più andiamo avanti nel egime della frequenza, più si infittiscono i modi naturali (i punti in cui si trovano delle frequenze associate ai modi naturali).
+                    Per poter analizzare uno spazio parallelepipedo usiamo <a href="https://amcoustics.com/tools/amroc?l=500&w=700&h=200&r60=0.6"><b>amroc - The Room Mode Calculator</b></a>, un'applet di calcolo dei modi naturali di uno spazio a tre dimensioni.
+                    Possiamo notare che più andiamo avanti nel regime della frequenza, più si infittiscono i modi naturali (i punti in cui si trovano delle frequenze associate ai modi naturali).
                   </p>
                 </div>
             </div>
