--- a/pages/learn/acustica_degli_spazi_musicali/01_02_04_analisi_delle_frequenze_associate.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_02_04_analisi_delle_frequenze_associate.html
@@ -106,7 +106,7 @@
                       <div class="col-12 col-lg-5">
                           <div class="image-wrapper">
                               <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/09_amroc.gif" alt="www.gabrielavelitch.com">
-                              <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Analisi frequenze associate di uno spazio tridimensionale</p>
+                              <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Analisi delle frequenze associate di uno spazio tridimensionale</p>
                           </div>
                       </div>
                   </div>
