--- a/pages/learn/acustica_degli_spazi_musicali/01_02_04_analisi_delle_frequenze_associate.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_02_04_analisi_delle_frequenze_associate.html
@@ -113,6 +113,27 @@
               </div>
           </section>
 
+          <!-- Text-->
+          <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+              <div class="container">
+                  <div class="row justify-content-center">
+                      <div class="col-md-12 col-lg-8">
+                          <p class="mbr-text mbr-fonts-style display-7">
+                            Osserviamo ora una relazione che ci dice qual'è la densità frequenziale dei modi naturali (densità nel senso di numero di modi per unità di frequenza):
+                            D(Nf)= 4πV•(f^2/c^3)
+                            Possiamo dedurre che la densità dei modi è proporzionale al volume dello spazio e cresce con il quadrato della frequenza.
+                            Questo aspetto si vede anche nella sezione dell'applet chiamata Bonello: la curva di crescita del numero di modi per terza sembra una parabola.
+                            Un'altra cosa da notare
+                            La frequenza di Schroeder è lo spartiacque tra due situazioni molto diverse.
+                            Prima di essa la densità dei modi è tale da giustificare un approccio di analisi modale, dopo di essa la densità inizia a salire per cui adottare un approccio di tipo analitico-matematico come quello visto fin ora, per quanto sia corretto, può iniziare a diventare critico per il crescere della complessità.
+                            Superata la frequenza di Schroeder, ha dunque più senso adottare un approccio statistico.
+                          </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
     <div class="container">
