--- a/pages/learn/acustica_degli_spazi_musicali/01_02_04_analisi_delle_frequenze_associate.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_02_04_analisi_delle_frequenze_associate.html
@@ -120,13 +120,14 @@
                       <div class="col-md-12 col-lg-8">
                           <p class="mbr-text mbr-fonts-style display-7">
                             Osserviamo ora una relazione che ci dice qual'è la densità frequenziale dei modi naturali (densità nel senso di numero di modi per unità di frequenza):
-                            D(Nf)= 4πV•(f^2/c^3)
+                            <b>D(Nf)= 4πV•(f^2/c^3)</b>
+                            <br>
+                            <br>
                             Possiamo dedurre che la densità dei modi è proporzionale al volume dello spazio e cresce con il quadrato della frequenza.
                             Questo aspetto si vede anche nella sezione dell'applet chiamata Bonello: la curva di crescita del numero di modi per terza sembra una parabola.
-                            Un'altra cosa da notare
-                            La frequenza di Schroeder è lo spartiacque tra due situazioni molto diverse.
-                            Prima di essa la densità dei modi è tale da giustificare un approccio di analisi modale, dopo di essa la densità inizia a salire per cui adottare un approccio di tipo analitico-matematico come quello visto fin ora, per quanto sia corretto, può iniziare a diventare critico per il crescere della complessità.
-                            Superata la frequenza di Schroeder, ha dunque più senso adottare un approccio statistico.
+                            Un'altra cosa da notare è la <b>frequenza di Schroeder</b>. Essa è lo spartiacque tra due situazioni molto diverse.
+                            Prima della frequenza di Schroeder la densità dei modi è tale da giustificare un approccio di analisi modale, dopo di essa la densità inizia a salire per cui adottare un approccio di tipo analitico-matematico come quello visto fin ora, per quanto sia corretto, può iniziare a diventare critico per il crescere della complessità.
+                            Superata la frequenza di Schroeder, ha dunque più senso adottare un approccio statistico, cioè sostanzialmente descrivere la risposta dello spazio in termini di grandezze aggregate.
                           </p>
                         </div>
                     </div>
