--- a/pages/learn/acustica_degli_spazi_musicali/01_02_04_analisi_delle_frequenze_associate.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_02_04_analisi_delle_frequenze_associate.html
@@ -127,7 +127,11 @@
                             Questo aspetto si vede anche nella sezione dell'applet chiamata Bonello: la curva di crescita del numero di modi per terza sembra una parabola.
                             Un'altra cosa da notare è la <b>frequenza di Schroeder</b>. Essa è lo spartiacque tra due situazioni molto diverse.
                             Prima della frequenza di Schroeder la densità dei modi è tale da giustificare un approccio di analisi modale, dopo di essa la densità inizia a salire per cui adottare un approccio di tipo analitico-matematico come quello visto fin ora, per quanto sia corretto, può iniziare a diventare critico per il crescere della complessità.
-                            Superata la frequenza di Schroeder, ha dunque più senso adottare un approccio statistico, cioè sostanzialmente descrivere la risposta dello spazio in termini di grandezze aggregate.
+                            Superata la frequenza di Schroeder ha dunque più senso adottare un approccio statistico, cioè sostanzialmente descrivere la risposta dello spazio in termini di grandezze aggregate.
+                            La distribuzione dell'energia dei modi elevati diventa talmente polverizzata all'interno dello spazio che possiamo fare l'ipotesi che sia diffusa, sparpagliata in maniera uniforme in tutto lo spazio, al contrario delle frequenze più gravi che invece occupano uno spazio definito.
+                            
+
+
                           </p>
                         </div>
                     </div>
