--- a/pages/learn/acustica_degli_spazi_musicali/01_02_04_analisi_delle_frequenze_associate.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_02_04_analisi_delle_frequenze_associate.html
@@ -130,9 +130,19 @@
                             Superata la frequenza di Schroeder ha dunque più senso adottare un approccio statistico, cioè sostanzialmente descrivere la risposta dello spazio in termini di grandezze aggregate.
                             La distribuzione dell'energia dei modi elevati diventa talmente polverizzata all'interno dello spazio che possiamo fare l'ipotesi che sia diffusa, sparpagliata in maniera uniforme in tutto lo spazio, al contrario delle frequenze più gravi che invece occupano uno spazio definito.
                             Questa condizione viene chiamata <b>campo diffuso</b>. Analogamente all'approccio d'analisi usato per il gas, anche in questo caso adotto un approccio macroscopico in quanto andare in profondità è troppo complesso e poco proficuo.
-                            
-
-
+                            <br>
+                            <br>
+                            Riassumendo possiamo dire che superata la <b>frequenza di Schroeder</b> abbia senso valutare la risposta dello spazio in termini di grandezze macroscopiche.
+                            <br>
+                            <br>
+                            Questo è importante perchè nell'analisi di uno spazio dobbiamo sempre considerare entrambe le risposte, sia microscopica che macoscopica, in quanto in relazione tra loro.
+                            Più grande è lo spazio e minore sarà la frequenza di Schroeder perchè le dimensioni dello spazio saranno di gran lunga più grandi delle lunghezze d'onda pià lunghe della banda udibile.
+                            In questo caso ha più senso usare un <b>approccio di analisi acustica di tipo geometrico</b>.
+                            <br>
+                            <br>
+                            Se faccio l'analisi di uno spazio piccolo, tipo uno studio, avrò dei modi naturali molto forti anche a frequenze medie.
+                            Se vauto invece un auditorium, la probabilità che si instaurino dei modi naturali a frequenza bassa diminuisce perchè le distanze dello spazio sono più grandi della lunghezza d'onda più grave.
+                            Devo sempre considerare i due aspetti, micro e macro, ed integrarli in base allo spazio preso in considerazione.
                           </p>
                         </div>
                     </div>
