--- a/pages/learn/acustica_degli_spazi_musicali/01_02_04_analisi_delle_frequenze_associate.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_02_04_analisi_delle_frequenze_associate.html
@@ -141,8 +141,11 @@
                             <br>
                             <br>
                             Se faccio l'analisi di uno spazio piccolo, tipo uno studio, avrò dei modi naturali molto forti anche a frequenze medie.
-                            Se vauto invece un auditorium, la probabilità che si instaurino dei modi naturali a frequenza bassa diminuisce perchè le distanze dello spazio sono più grandi della lunghezza d'onda più grave.
+                            Se valuto invece un auditorium, la probabilità che si instaurino dei modi naturali a frequenza bassa diminuisce perchè le distanze dello spazio sono più grandi della lunghezza d'onda più grave.
                             Devo sempre considerare i due aspetti, micro e macro, ed integrarli in base allo spazio preso in considerazione.
+                            <br>
+                            <br>
+
                           </p>
                         </div>
                     </div>
