--- a/pages/learn/acustica_degli_spazi_musicali/01_02_05_curva_di_risonanza_di_un_modo_naturale.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_02_05_curva_di_risonanza_di_un_modo_naturale.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Analisi delle Frequenze Associate</title>
+  <title>Curva di Risonanza di un Modo Naturale</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -78,7 +78,7 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Acustica degli Ambienti Musicali</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Analisi delle Frequenze Associate</strong></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Curva di Risonanza di un Modo Naturale</strong></h4>
             </div>
         </div>
     </div>
@@ -91,63 +91,13 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-                    Per poter analizzare uno spazio parallelepipedo usiamo <a href="https://amcoustics.com/tools/amroc?l=500&w=700&h=200&r60=0.6"><b>amroc - The Room Mode Calculator</b></a>, un'applet di calcolo dei modi naturali di uno spazio a tre dimensioni.
-                    Possiamo notare che più andiamo avanti nel regime della frequenza, più si infittiscono i modi naturali (i punti in cui si trovano delle frequenze associate ai modi naturali).
+
                   </p>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Image-->
-          <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
-              <div class="container-fluid">
-                  <div class="row justify-content-center">
-                      <div class="col-12 col-lg-5">
-                          <div class="image-wrapper">
-                              <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/09_amroc.gif" alt="www.gabrielavelitch.com">
-                              <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Analisi delle frequenze associate di uno spazio tridimensionale</p>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </section>
-
-          <!-- Text-->
-          <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
-              <div class="container">
-                  <div class="row justify-content-center">
-                      <div class="col-md-12 col-lg-8">
-                          <p class="mbr-text mbr-fonts-style display-7">
-                            Osserviamo ora una relazione che ci dice qual'è la densità frequenziale dei modi naturali (densità nel senso di numero di modi per unità di frequenza):
-                            <b>D(Nf)= 4πV•(f^2/c^3)</b>
-                            <br>
-                            <br>
-                            Possiamo dedurre che la densità dei modi è proporzionale al volume dello spazio e cresce con il quadrato della frequenza.
-                            Questo aspetto si vede anche nella sezione dell'applet chiamata Bonello: la curva di crescita del numero di modi per terza sembra una parabola.
-                            Un'altra cosa da notare è la <b>frequenza di Schroeder</b>. Essa è lo spartiacque tra due situazioni molto diverse.
-                            Prima della frequenza di Schroeder la densità dei modi è tale da giustificare un approccio di analisi modale, dopo di essa la densità inizia a salire per cui adottare un approccio di tipo analitico-matematico come quello visto fin ora, per quanto sia corretto, può iniziare a diventare critico per il crescere della complessità.
-                            Superata la frequenza di Schroeder ha dunque più senso adottare un approccio statistico, cioè sostanzialmente descrivere la risposta dello spazio in termini di grandezze aggregate.
-                            La distribuzione dell'energia dei modi elevati diventa talmente polverizzata all'interno dello spazio che possiamo fare l'ipotesi che sia diffusa, sparpagliata in maniera uniforme in tutto lo spazio, al contrario delle frequenze più gravi che invece occupano uno spazio definito.
-                            Questa condizione viene chiamata <b>campo diffuso</b>. Analogamente all'approccio d'analisi usato per il gas, anche in questo caso adotto un approccio macroscopico in quanto andare in profondità è troppo complesso e poco proficuo.
-                            <br>
-                            <br>
-                            Riassumendo possiamo dire che superata la <b>frequenza di Schroeder</b> abbia senso valutare la risposta dello spazio in termini di grandezze macroscopiche.
-                            <br>
-                            <br>
-                            Questo è importante perchè nell'analisi di uno spazio dobbiamo sempre considerare entrambe le risposte, sia microscopica che macoscopica, in quanto in relazione tra loro.
-                            Più grande è lo spazio e minore sarà la frequenza di Schroeder perchè le dimensioni dello spazio saranno di gran lunga più grandi delle lunghezze d'onda pià lunghe della banda udibile.
-                            In questo caso ha più senso usare un <b>approccio di analisi acustica di tipo geometrico</b>.
-                            <br>
-                            <br>
-                            Se faccio l'analisi di uno spazio piccolo, tipo uno studio, avrò dei modi naturali molto forti anche a frequenze medie.
-                            Se valuto invece un auditorium, la probabilità che si instaurino dei modi naturali a frequenza bassa diminuisce perchè le distanze dello spazio sono più grandi della lunghezza d'onda più grave.
-                            Devo sempre considerare i due aspetti, micro e macro, ed integrarli in base allo spazio preso in considerazione.
-                          </p>
-                        </div>
-                    </div>
-                </div>
-            </section>
 
 
 <!-- Prev/Next-->
