--- a/pages/learn/acustica_degli_spazi_musicali/01_02_05_curva_di_risonanza_di_un_modo_naturale.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_02_05_curva_di_risonanza_di_un_modo_naturale.html
@@ -91,6 +91,14 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
+                    Gli aspetti finora trattati fanno parte di una realtà teorica.
+                    Se il modo fosse ideale come descritto finora, avremmo un picco in corrispondenza della frequenza di risonanza.
+                    Quindi anche solo spostandomi di un Hertz il fenomeno della risonanza si estinguerebbe.
+                    Nella realtà invece, per effetto del fatto che le pareti non sono mi perfettamente riflettenti,
+                    abbiamo che la curva di risonanza di un modo naturale è fatta a campana. Funziona proprio come un filtro risonante.
+                    Quel modo risonante risponde non solo ad una frequenza precisa, ma ad una <b>banda di risonanza</b>, questo perchè nella realà α (coefficiente di assorbimento) è sempre maggiore di 0.
+                    Quindi qualunque parete ha il suo coefficiente maggioe di 0.
+                    Una parete con coefficiente 1 sarebbe una parete completamente assorbente.
 
                   </p>
                 </div>
