--- a/pages/learn/acustica_degli_spazi_musicali/01_02_05_curva_di_risonanza_di_un_modo_naturale.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_02_05_curva_di_risonanza_di_un_modo_naturale.html
@@ -98,15 +98,30 @@
                     abbiamo che la curva di risonanza di un modo naturale è fatta a campana.
                     Funziona proprio come un filtro risonante.
                     Quel modo risonante risponde non solo ad una frequenza precisa, ma ad una <b>banda di risonanza</b>, questo perchè nella realà <b>α (coefficiente di assorbimento)</b> è sempre maggiore di 0.
+                    <br>
+                    <br>
+                    <h3 style="text-align:center;">
+                    <b>α = 1 - (Er/Ei) > 0</b>
+                    <br>
+                    <br>
                     Quindi qualunque parete ha il suo coefficiente maggiore di 0.
                     Una parete con coefficiente 1 sarebbe una parete completamente assorbente.
                     E' chiaro che questa situazione non esiste.
-
+                    <br>
+                    <br>
                     α = 0 perfettamente riflettente
                     α = 1 perfettamente assorbente
-
+                    <br>
+                    <br>
                     energia riflessa
                     energia incidente
+
+
+                    Bisogna precisare che il coefficiente α è in funzione delle frequenze.
+                    Per ogni frequenza esso avrà un valore differente, α = α(f).
+                    <br>
+                    <br>
+
                   </p>
                 </div>
             </div>
