--- a/pages/learn/acustica_degli_spazi_musicali/01_02_05_curva_di_risonanza_di_un_modo_naturale.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_02_05_curva_di_risonanza_di_un_modo_naturale.html
@@ -109,12 +109,12 @@
                     E' chiaro che questa situazione non esiste.
                     <br>
                     <br>
-                    α = 0 perfettamente riflettente
-                    α = 1 perfettamente assorbente
+                    <b>α</b> = 0 perfettamente riflettente
+                    <b>α</b> = 1 perfettamente assorbente
                     <br>
                     <br>
-                    Er = energia riflessa
-                    Ei = energia incidente
+                    <b>Er</b> = energia riflessa
+                    <b>Ei</b> = energia incidente
                     <br>
                     <br>
                     Bisogna precisare che il coefficiente α è in funzione delle frequenze.
