--- a/pages/learn/acustica_degli_spazi_musicali/01_02_05_curva_di_risonanza_di_un_modo_naturale.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_02_05_curva_di_risonanza_di_un_modo_naturale.html
@@ -118,7 +118,7 @@
                     <br>
                     <br>
                     Bisogna precisare che il coefficiente α è in funzione delle frequenze.
-                    Per ogni frequenza esso avrà un valore differente, α = α(f).
+                    Per ogni frequenza esso avrà un valore differente, <b>α = α(f)</b>.
                     <br>
                     <br>
 
