--- a/pages/learn/acustica_degli_spazi_musicali/01_02_05_curva_di_risonanza_di_un_modo_naturale.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_02_05_curva_di_risonanza_di_un_modo_naturale.html
@@ -93,7 +93,7 @@
                   <p class="mbr-text mbr-fonts-style display-7">
                     Gli aspetti finora trattati fanno parte di una realtà teorica.
                     Se il modo fosse ideale come descritto finora, avremmo un picco in corrispondenza della frequenza di risonanza.
-                    Quindi anche solo spostandomi di un Hertz il fenomeno della risonanza si estinguerebbe.
+                    Quindi anche solo spostandomi di 1Hz il fenomeno della risonanza si estinguerebbe.
                     Nella realtà invece, per effetto del fatto che le pareti non sono mi perfettamente riflettenti,
                     abbiamo che la curva di risonanza di un modo naturale è fatta a campana.
                     Funziona proprio come un filtro risonante.
