--- a/pages/learn/acustica_degli_spazi_musicali/01_02_05_curva_di_risonanza_di_un_modo_naturale.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_02_05_curva_di_risonanza_di_un_modo_naturale.html
@@ -110,11 +110,11 @@
                     E' chiaro che questa situazione non esiste.
                     <br>
                     <br>
-                    <b>α</b> = 0 perfettamente riflettente
+                    <b>α</b> = 0 perfettamente riflettente<br>
                     <b>α</b> = 1 perfettamente assorbente
                     <br>
                     <br>
-                    <b>Er</b> = energia riflessa
+                    <b>Er</b> = energia riflessa<br>
                     <b>Ei</b> = energia incidente
                     <br>
                     <br>
