--- a/pages/learn/acustica_degli_spazi_musicali/01_02_05_curva_di_risonanza_di_un_modo_naturale.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_02_05_curva_di_risonanza_di_un_modo_naturale.html
@@ -141,6 +141,20 @@
               </div>
           </section>
 
+
+          <!-- Text-->
+          <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+              <div class="container">
+                  <div class="row justify-content-center">
+                      <div class="col-md-12 col-lg-8">
+                          <p class="mbr-text mbr-fonts-style display-7">
+                            L'applet <a href="https://amcoustics.com/tools/amroc?l=500&w=700&h=200&r60=0.6"><b>amroc - The Room Mode Calculator</b></a>, considerando le pareti come ideali, non ci permette di attribuire il coefficiente α.
+                            Usiamo dunque il software 
+                          </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
     <div class="container">
