--- a/pages/learn/acustica_degli_spazi_musicali/01_02_05_curva_di_risonanza_di_un_modo_naturale.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_02_05_curva_di_risonanza_di_un_modo_naturale.html
@@ -150,11 +150,30 @@
                           <p class="mbr-text mbr-fonts-style display-7">
                             Con l'applet <a href="https://amcoustics.com/tools/amroc?l=500&w=700&h=200&r60=0.6"><b>amroc - The Room Mode Calculator</b></a> non possiamo attribuire il coefficiente α in quanto essa considera le pareti come ideali.
                             Usiamo dunque il software di analisi acustica <a href="https://www.roomeqwizard.com/index.html"><b>REW</b></a>.
+                            Questo software fa la stessa cosa del precedente ma con più accuratezza.
+                            In questo caso la rappresentazione grafica della risponta in frequenza tiene in considerazione anche i coefficienti di assorbimento delle varie pareti.
                           </p>
                         </div>
                     </div>
                 </div>
             </section>
+
+            <!-- Image-->
+                  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+                      <div class="container-fluid">
+                          <div class="row justify-content-center">
+                              <div class="col-12 col-lg-5">
+                                  <div class="image-wrapper">
+                                      <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/11_rew.png" alt="www.gabrielavelitch.com">
+                                      <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">REW - Room Simulator Software</p>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </section>
+
+
+
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
     <div class="container">
