--- a/pages/learn/acustica_degli_spazi_musicali/01_02_05_curva_di_risonanza_di_un_modo_naturale.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_02_05_curva_di_risonanza_di_un_modo_naturale.html
@@ -149,7 +149,7 @@
                       <div class="col-md-12 col-lg-8">
                           <p class="mbr-text mbr-fonts-style display-7">
                             Con l'applet <a href="https://amcoustics.com/tools/amroc?l=500&w=700&h=200&r60=0.6"><b>amroc - The Room Mode Calculator</b></a> non possiamo attribuire il coefficiente α in quanto essa considera le pareti come ideali.
-                            Usiamo dunque il software di analisi acustica <a href="https://www.roomeqwizard.com/index.html"><b>REW</b></a>.
+                            Usiamo dunque il <a href="https://www.roomeqwizard.com/index.html"><b>software di analisi acustica REW</b></a>.
                             Questo software fa la stessa cosa del precedente ma con più accuratezza.
                             In questo caso la rappresentazione grafica della risponta in frequenza tiene in considerazione anche i coefficienti di assorbimento delle varie pareti.
                           </p>
