--- a/pages/learn/acustica_degli_spazi_musicali/01_02_05_curva_di_risonanza_di_un_modo_naturale.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_02_05_curva_di_risonanza_di_un_modo_naturale.html
@@ -172,7 +172,18 @@
                       </div>
                   </section>
 
-
+                  <!-- Text-->
+                  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+                      <div class="container">
+                          <div class="row justify-content-center">
+                              <div class="col-md-12 col-lg-8">
+                                  <p class="mbr-text mbr-fonts-style display-7">
+                                    Purtroppo la risposta in frequenza non mi dice nulla sulle fasi, essa è solo una fotografia delle condizioni stazionarie, non mi dice nulla sui transitori.
+                                  </p>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
 
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
