--- a/pages/learn/acustica_degli_spazi_musicali/01_02_05_curva_di_risonanza_di_un_modo_naturale.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_02_05_curva_di_risonanza_di_un_modo_naturale.html
@@ -178,7 +178,7 @@
                           <div class="row justify-content-center">
                               <div class="col-md-12 col-lg-8">
                                   <p class="mbr-text mbr-fonts-style display-7">
-                                    Purtroppo la risposta in frequenza non mi dice nulla sulle fasi, essa è solo una fotografia delle condizioni stazionarie, non mi dice nulla sui transitori.
+                                    Purtroppo la risposta in frequenza non mi dice nulla sulle fasi. Essa è solo una fotografia delle condizioni stazionarie, non mi dice nulla sui transitori.
                                   </p>
                                 </div>
                             </div>
