--- a/pages/learn/acustica_degli_spazi_musicali/02_06_frequenza_di_schroeder.html
+++ b/pages/learn/acustica_degli_spazi_musicali/02_06_frequenza_di_schroeder.html
@@ -91,21 +91,37 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-
+                    Abbiamo già visto concettualmente cos'è la frequenza di Schroeder: la frequenza al di sopra della quale l'approccio statistico ha più senso in quanto il campo si comporta in maniera diffusa.
+                    <br>
+                    <br>
+                    Osserviamo alcune relazioni utili ad esprimere la frequenza di Schroeder.
+                    Queste due formule sono equivalenti, come vedremo in seguito c'è una relazione fissa tra quel delta medio ed il tempo di riverberazione.
                   </p>
                 </div>
             </div>
         </div>
     </section>
 
-
+    <!-- Image-->
+          <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+              <div class="container-fluid">
+                  <div class="row justify-content-center">
+                      <div class="col-12 col-lg-5">
+                          <div class="image-wrapper">
+                              <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/12_calcolo_frequenza_schroeder.png" alt="www.gabrielavelitch.com">
+                              <p class="mbr-description mbr-fonts-style mt-2 align-center display-4"></p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </section>
 
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/02_05_curva_di_risonanza_di_un_modo_naturale.html">&lt; Previous</a>
                     <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
                     <br>
                     <br>
