--- a/pages/learn/acustica_degli_spazi_musicali/02_06_frequenza_di_schroeder.html
+++ b/pages/learn/acustica_degli_spazi_musicali/02_06_frequenza_di_schroeder.html
@@ -116,6 +116,22 @@
               </div>
           </section>
 
+
+          <!-- Text-->
+          <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+              <div class="container">
+                  <div class="row justify-content-center">
+                      <div class="col-md-12 col-lg-8">
+                          <p class="mbr-text mbr-fonts-style display-7">
+                            Dall'esempio notiamo che la frequenza limite è direttamente proporzionale al tempo di riverberazione ed è inversamente proporzionale al volume,
+                            e quindi quando il volume aumenta, a parità di tempo di riverberzione, la frequenza diminuisce.
+                            A volume invece costante, se il tempo di riverberazione è più grande, la frequenza aumenta.
+                          </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
     <div class="container">
