--- a/pages/learn/acustica_degli_ambienti_musicali.html
+++ b/pages/learn/acustica_degli_ambienti_musicali.html
@@ -109,7 +109,7 @@
                         <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_01_00_lo_spazio_come_un_filtro.html"><b>01.01. Lo Spazio Come un Filtro</b></a></li>
                         <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_02_00_tre_metodi_di_studio.html"><b>01.02. Tre Metodi di Studio</b></a></li>
                       </ul>
-                      <li><b>02. Approccio di Analisi Modale</b></li>
+                      <li><b>02. Approccio Modale</b></li>
                       <ul>
                           <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/02_01_modi_naturali_in_una_dimesione_spaziale.html"><b>02.01. Modi Naturali in Una Dimensione Spaziale</b></a></li>
                           <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/02_02_risposta_in_frequenza.html"><b>02.02. Risposta in Frequenza</b></a></li>
@@ -117,7 +117,9 @@
                           <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/02_04_analisi_delle_frequenze_associate.html"><b>02.04. Analisi delle Frequenze Associate</b></a></li>
                           <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/02_05_curva_di_risonanza_di_un_modo_naturale.html"><b>02.05. Curva di Risonanza di un Modo Naturale</b></a></li>
                           <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/02_06_frequenza_di_schroeder.html"><b>02.06. Frequenza di Schroeder</b></a></li>
-                    </ul>
+                        </ul>
+                        <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/03_approccio_geometrico.html"><b>03. Approccio Geometrico</b></a></li>
+                        <ul>
                   </p>
               </div>
           </div>
