--- a/pages/learn/acustica_degli_spazi_musicali/03_approccio_geometrico.html
+++ b/pages/learn/acustica_degli_spazi_musicali/03_approccio_geometrico.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Il Concetto di Pregiudizio</title>
+  <title>Approccio Geometrico</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -78,7 +78,7 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Acustica degli Ambienti Musicali</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Vibrazione Come Modello Universale</strong></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Approccio Geometrico</strong></h4>
             </div>
         </div>
     </div>
@@ -91,7 +91,10 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-
+                    Un'altra possibilità per studiare il campo acustico è in condizioni di approssimazione geometrica: si tratta la propagazione del campo acustico come se fosse governata da raggi.
+                    <br>
+                    <br>
+                    Pensando alla luce capiamo bene cosa sia un raggio
                   </p>
                 </div>
             </div>
