--- a/pages/learn/acustica_degli_spazi_musicali/02_06_frequenza_di_schroeder.html
+++ b/pages/learn/acustica_degli_spazi_musicali/02_06_frequenza_di_schroeder.html
@@ -139,7 +139,7 @@
                             Dall'esempio notiamo che la frequenza limite è direttamente proporzionale al tempo di riverberazione ed è inversamente proporzionale al volume,
                             e quindi quando il volume aumenta, a parità di tempo di riverberzione, la frequenza diminuisce.
                             A volume invece costante, se il tempo di riverberazione è più grande, la frequenza aumenta.
-                            Questa cosa è intuibile in quanto in un volume grande sicuramente la frequenza alla quale lo sazio si comporta come un campo diffuso è più grave, perchè i modi naturali coinvolti sono di più.
+                            Questa cosa è intuibile in quanto in un volume grande sicuramente la frequenza alla quale lo spazio si comporta come un campo diffuso è più grave, perchè i modi naturali coinvolti sono di più.
                             <br>
                             <br>
                             La relazione di proporzioalità inversa tra le due espressioni è data da:
