--- a/pages/learn/acustica_degli_spazi_musicali/03_approccio_geometrico.html
+++ b/pages/learn/acustica_degli_spazi_musicali/03_approccio_geometrico.html
@@ -94,7 +94,9 @@
                     Un'altra possibilità per studiare il campo acustico è in condizioni di approssimazione geometrica: si tratta la propagazione del campo acustico come se fosse governata da raggi.
                     <br>
                     <br>
-                    Pensando alla luce capiamo bene cosa sia un raggio
+                    Cosa significa raggio? Immaginiamo un laser (un fascio di luce coerente, in una regione dello spazio molto circoscritta), se esso incontra una parete si riflette con lo stesso angolo di incidenza calcolato sulla perpendicolare della parete in quel punto.
+                    Capiamo bene che questo approccio ha senso in una regione frequenziale nella quale le lunghezze d'onda in gioco sono più piccole delle grandezze medie fisiche dello spazio, perchè questo approccio non tiene conto del fatto che per esempio ci sono fenomeni come la diffrazione, la diffusione che sono fenomeni legati alla natura più ondulatoria del campo. 
+                    L'approccio geometrico è come se vedesse il campo acustico come un proiettile sparato in una certa direzione.
                   </p>
                 </div>
             </div>
