--- a/pages/learn/acustica_degli_spazi_musicali/03_approccio_geometrico.html
+++ b/pages/learn/acustica_degli_spazi_musicali/03_approccio_geometrico.html
@@ -95,23 +95,47 @@
                     <br>
                     <br>
                     Cosa significa raggio? Immaginiamo un laser (un fascio di luce coerente, in una regione dello spazio molto circoscritta), se esso incontra una parete si riflette con lo stesso angolo di incidenza calcolato sulla perpendicolare della parete in quel punto.
-                    Capiamo bene che questo approccio ha senso in una regione frequenziale nella quale le lunghezze d'onda in gioco sono più piccole delle grandezze medie fisiche dello spazio, perchè questo approccio non tiene conto del fatto che per esempio ci sono fenomeni come la diffrazione, la diffusione che sono fenomeni legati alla natura più ondulatoria del campo.
-                    L'approccio geometrico è come se vedesse il campo acustico come un proiettile sparato in una certa direzione.
-                    Posso ragionevolmente usare questo approccio quando la lunghezza d'onda è più piccola di 1 metro.
-                    <br>
-                    <br>
-                    I sistemi che si usano per calcolare la risposta dello spazio ad un campo acustico sono due: Ray Tracing e le Sorgenti Virtuali.
-                    Entrambi i sistemi sono implementati in software commerciali di previsione acustica degli ambienti.
-                    Il Ray Tracing è stato mediato da applicazioni di design visuale, modellazione 3D per esempio.
-                    Consiste nel prendere una sorgente come se fosse la sorgente di un certo numero di raggi e poi calcolare il percorso di ognuna di esse per vedere quale raggiunge il punto d'ascolto prefissato.
-                    Questo è il sistema con il quale si fa tipicamente il rendering dei modelli 3D.
-                    
                   </p>
                 </div>
             </div>
         </div>
     </section>
 
+    <!-- Image-->
+          <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+              <div class="container-fluid">
+                  <div class="row justify-content-center">
+                      <div class="col-12 col-lg-5">
+                          <div class="image-wrapper">
+                              <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/14_raggio.png" alt="www.gabrielavelitch.com">
+                              <p class="mbr-description mbr-fonts-style mt-2 align-center display-4"></p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </section>
+
+    <!-- Text-->
+    <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-12 col-lg-8">
+                    <p class="mbr-text mbr-fonts-style display-7">
+                      Capiamo bene che questo approccio ha senso in una regione frequenziale nella quale le lunghezze d'onda in gioco sono più piccole delle grandezze medie fisiche dello spazio, perchè questo approccio non tiene conto del fatto che per esempio ci sono fenomeni come la diffrazione, la diffusione che sono fenomeni legati alla natura più ondulatoria del campo.
+                      L'approccio geometrico è come se vedesse il campo acustico come un proiettile sparato in una certa direzione.
+                      Posso ragionevolmente usare questo approccio quando la lunghezza d'onda è più piccola di 1 metro.
+                      <br>
+                      <br>
+                      I sistemi che si usano per calcolare la risposta dello spazio ad un campo acustico sono due: Ray Tracing e le Sorgenti Virtuali.
+                      Entrambi i sistemi sono implementati in software commerciali di previsione acustica degli ambienti.
+                      Il Ray Tracing è stato mediato da applicazioni di design visuale, modellazione 3D per esempio.
+                      Consiste nel prendere una sorgente come se fosse la sorgente di un certo numero di raggi e poi calcolare il percorso di ognuna di esse per vedere quale raggiunge il punto d'ascolto prefissato.
+                      Questo è il sistema con il quale si fa tipicamente il rendering dei modelli 3D.
+                    </p>
+                  </div>
+              </div>
+          </div>
+      </section>
 
 
 <!-- Prev/Next-->
