--- a/pages/learn/acustica_degli_spazi_musicali/03_approccio_geometrico.html
+++ b/pages/learn/acustica_degli_spazi_musicali/03_approccio_geometrico.html
@@ -131,12 +131,80 @@
                       Il Ray Tracing è stato mediato da applicazioni di design visuale, modellazione 3D per esempio.
                       Consiste nel prendere una sorgente come se fosse la sorgente di un certo numero di raggi e poi calcolare il percorso di ognuna di esse per vedere quale raggiunge il punto d'ascolto prefissato.
                       Questo è il sistema con il quale si fa tipicamente il rendering dei modelli 3D.
+                      <br>
+                      <br>
+                      Nel sistema delle sorgenti virtuali posso togliere la parete superiore e sostituirla con una sorgente che si trova nella posizione speculare rispetto alla sorgente reale.
+                      Praticamente faccio una simmetria rispetto alla parete superiore.
+                    </p>
+                    </div>
+                    </div>
+                    </div>
+                    </section>
+
+                    <!-- Image-->
+                    <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+                    <div class="container-fluid">
+                    <div class="row justify-content-center">
+                        <div class="col-12 col-lg-5">
+                            <div class="image-wrapper">
+                                <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/15_riflessioni_primo_ordine.png" alt="www.gabrielavelitch.com">
+                                <p class="mbr-description mbr-fonts-style mt-2 align-center display-4"></p>
+                            </div>
+                        </div>
+                    </div>
+                    </div>
+                    </section>
+
+                    <!-- Text-->
+                    <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+                    <div class="container">
+                    <div class="row justify-content-center">
+                    <div class="col-md-12 col-lg-8">
+                      <p class="mbr-text mbr-fonts-style display-7">
+                      Con il sistema delle sorgenti virtuali posso dunque sostituire le quattro pareti con la sorgente reale più quattro sorgenti virtuali del primo ordine.
+                      Quindi come primo ordine di riflessioni abbiamo quello che viene dalle quattro sorgenti virtuali che sono state collocate sostituendo le pareti con un'operazione di simmetria.
+                      In sostanza è come se quando si accende la sorgente reale contemporaneamente si accendessero tutte le sorgenti virtuali e l'ascoltatore viene investito sia dall'onda diretta sia a quelle relative alle quattro sorgenti virtuali.
+                      Il contributo che arriva dalle sorgenti virtuali andrà attenuato moltiplicandolo con il coefficiente di attenuazione di quella parete e sarà ritardato rispetto a quello della sorgente diretta in quanto farà un percorso più lungo.
+                      Per una semplificazione grafica, nel caso preso in analisi vediamo solo quattro sorgenti virtuali; nel primo ordine esse saranno sempre sei.
+                      Le sorgenti virtuali del primo ordine mi permettono di ricostruire la traiettoria del raggio quando esso incontra una sola parete.
+                      <br>
+                      <br>
+                      Quelle del secondo ordine mi permettono di ricostruire il tracciato del raggio quando esso incontra due pareti (c'è un rimbalzo tra due pareti).
+                      Per ottenere una sorgente di secondo ordine
+
+                      Andando avanti ad aggiungere ordini e dunque sorgenti virtuali, otterrò una sorta di costellazione di sorgenti virtuali che mi danno il contributo delle prime riflessioni.
                     </p>
                   </div>
               </div>
           </div>
       </section>
 
+      <!-- Image-->
+      <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+      <div class="container-fluid">
+      <div class="row justify-content-center">
+          <div class="col-12 col-lg-5">
+              <div class="image-wrapper">
+                  <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/15_riflessioni_primo_ordine.png" alt="www.gabrielavelitch.com">
+                  <p class="mbr-description mbr-fonts-style mt-2 align-center display-4"></p>
+              </div>
+          </div>
+      </div>
+      </div>
+      </section>
+
+      <!-- Text-->
+      <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+      <div class="container">
+      <div class="row justify-content-center">
+      <div class="col-md-12 col-lg-8">
+        <p class="mbr-text mbr-fonts-style display-7">
+        Andando avanti ad aggiungere ordini e dunque sorgenti virtuali, otterrò una sorta di costellazione di sorgenti virtuali che mi danno il contributo delle prime riflessioni.
+      </p>
+      </div>
+      </div>
+      </div>
+      </section>
 
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
